welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:8: error: illegal start of simple expression
	override def run() {
        ^