welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def doghouse() {avance()
avance()
gauche()}
for (i<-1 to 4)